[package]
name = "erc20_token"
version = "0.1.0"
authors = ["Arunmadhavan Evr"]
edition = "2021"

[dependencies]
ink = { version = "5.1.1", default-features = false }
ink_primitives = { version = "5.1.1" }
parity-scale-codec = { version = "3.6", default-features = false }
serde = { version = "1.0", default-features = false }

[dev-dependencies]
ink_e2e = { version = "5.1.1" }

[lib]
name = "erc20_token"
path = "src/lib.rs"
#crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink/std",
    "parity-scale-codec/std",
]
ink-as-dependency = []
e2e-tests = []
